--- a/client/rank.css
+++ b/client/rank.css
@@ -1,6 +1,24 @@
-.zoombar {
-    font-family:Arial; 
-    
-  }
+* {
+padding: 0;
+margin: 0;
+}
+
+html, body {
+height: 100%;
+}
+
+textarea { 
+    border-style: none; 
+    border-color: Transparent; 
+    overflow: hidden;
+    text-align:left;
+    font-size:18px;
+    font-family:helvetica, arial, sans-serif;
+    resize:none;
+    user-select: none;
+    -moz-user-select: none; /* for FireFox */
+    -webkit-user-select: none; /* for Chrome and Safari */
+    -khtml-user-select: none;
+}
   
 
